#3328236 javadoc + PMD